[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SoshiNaito", email = "pineappleyogurt1234@gmail.com" }
]
dependencies = [
    "ruff>=0.5.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/leetcode"]
